# parcours-lab

./: README.md  dev.sh  railway.json  tools.py
.claude/: settings.json
backend/: .flaskenv  app.py  pyproject.toml  routes.py  test_openrouter.py  test_route_chat_file.py  utils.py
backend-v2/: .dockerignore  Dockerfile  README.md  academic_graph.py  app.py  graph_generator.py  job_parser.py  models.py  pyproject.toml  requirements.txt  resume_parser.py  uwaterloo.py  wusa_clubs.py
backend-v2/data/: all_courses.json  choose-any.txt  clubs_cache.json  course_cache.json  programs-FLAT.json  programs-NESTED.json  programs-NESTED2.json  programs.json  subject_course_cache.json  unknowns.txt  uwflow_rating_cache.json
backend-v2/data/diagnostics/sample_html/: chemistry.html  cs-bmath.html  cs.html
backend-v2/scripts/: benchmark.py  pull_all_courses.py  scrape-term-data.py  scrape_programs.py
backend/config/: db.py
backend/data/processed/skills/: skill_groups_filtered.csv  skills_retained.csv  skills_retained_embeddings.npy  skills_retained_embeddings_uwaterloo_cs_1261.npy  skills_retained_uwaterloo_cs_1261.csv
backend/data/processed/topics/: topic_embeddings.npy
backend/data/processed/topics/topic_model/: ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
backend/data/processed/topics/uwaterloo_cs_courses_1261/: topic_embeddings.npy
backend/data/processed/topics/uwaterloo_cs_courses_1261/topic_model/: config.json  ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
backend/data/raw/courses/: uwaterloo_courses_1261.json  uwaterloo_cs_courses_1261.json
backend/data/skills/: skill_groups_filtered.csv
backend/middleware/: auth.py
backend/routes/: __init__.py  chat.py  courses.py  health.py  profile.py  skills.py
backend/schemas/: chat.py  courses.py  profile.py
backend/scripts/: cluster_courses.py  explore_data.py  filter_config.toml  filter_esco_skills.py  filter_skills.py  filter_skills_config.toml  ingest_uw_courses.py  recommend_courses.py  search_skills.py  test_openrouter.py  test_skills_profile.py
backend/services/: course_history.py  course_history_store.py  courses.py  llm.py  skill_matcher.py  tools.py
backend/supabase/: config.toml
backend/supabase/migrations/: 20260211224253_health_check.sql  20260223061413_create_schema.sql  20260316160947_add_messages_to_conversations.sql
docs/: course-flow.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend-v2/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend-v2/api/: [...path].ts
frontend-v2/src/: App.tsx  index.css
frontend-v2/src/components/: AcademicsForm.tsx  GoatChat.tsx  GoatMascot.tsx
frontend-v2/src/pages/: Board.tsx  Graph.tsx  Onboarding.tsx  Summary.tsx
frontend/app/: assistant.tsx  globals.css  layout.tsx
frontend/app/login/: page.tsx
frontend/app/theme-test/: page.tsx
frontend/lib/: api.ts  courses.ts  skills.ts  types.ts
(+19 files in other folders)
