[project]
name = "parcours-lab-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "openrouter (>=0.1.3,<0.2.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pandas = "^2.2"
typer = ">=0.21.1,<0.22.0"
torch = "2.2.2"
bertopic = ">=0.17.4,<0.18.0"
numpy = "<2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
