[project]
name = "parcours-lab-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "openrouter (>=0.1.3,<0.2.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "torch (==2.2.2)",
    "bertopic (>=0.17.4,<0.18.0)",
    "sentence-transformers (>=3.0,<4.0)",
    "transformers (>=4.0,<5.0)",
    "numpy (<2)",
    "pandas (>=2.2,<3.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "pypdf (>=4.0,<6.0)",
    "python-docx (>=1.0,<2.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
typer = ">=0.21.1,<0.22.0"
tqdm = "^4.67.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
